# project_analyser

./: .env  Gemini.txt  Gemini_mp.txt  README.md  pyproject.toml
project_analyser/: Quotation_marks.md  find_projects.py  project_analyser.py  project_analyser_mp.py  query_project_data.py  usfm_parser.py
project_analyser/tests/: test_sfm_counts.py
project_analyser/tests/data/: 32JONnhx.SFM  32JONnhx.sfm.sha256  32JONnhx_counts.csv  32JONnhx_counts.csv.sha256  642JNGNB1996.SFM  642JNGNB1996.sfm.sha256  642JNGNB1996_counts.csv  642JNGNB1996_counts.csv.sha256
